changed structure for categorizes

--- a/Anaconda_App.ipynb
+++ b/Anaconda_App.ipynb
@@ -12,24 +12,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "89e608d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (3135816453.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    \"Cost of Living\": [Affordability, housing costs, transportation expenses, cost of living],\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     ]
+    }
+   ],
    "source": [
     "categories = {\n",
-    "    \"Cost of Living\": \"Affordability, housing costs, transportation expenses, cost of living\",\n",
-    "    \"Career Opportunities\": \"Job prospects, career growth, industry availability, \",\n",
-    "    \"Education\": \"Quality of schools, universities, educational opportunities\",\n",
-    "    \"Lifestyle and Entertainment\": \"Recreational activities, cultural events, dining options, nightlife\",\n",
-    "    \"Safety and Security\": \"Low crime rates, secure environment, emergency services\",\n",
-    "    \"Climate and Environment\": \"Weather conditions, natural surroundings, outdoor activities\",\n",
-    "    \"Transportation and Infrastructure\": \"Public transportation systems, roads, infrastructure\",\n",
-    "    \"Healthcare and Wellness\": \"Quality healthcare facilities, hospitals, clinics, wellness services\",\n",
-    "    \"Diversity and Inclusion\": \"Diverse population, inclusive communities, welcoming environment\",\n",
-    "    \"Family-Friendly\": \"Family-friendly neighborhoods, parks, schools, amenities\"\n",
-    "}"
+    "    \"Cost of Living\": ['Affordability', 'housing costs', 'transportation expenses', 'cost of living'],\n",
+    "    \"Career Opportunities\": ['Job prospects', 'career growth', 'industry availability'],\n",
+    "    \"Education\": ['Quality of schools', 'universities', 'educational opportunities'],\n",
+    "    \"Lifestyle and Entertainment\": ['Recreational activities, cultural events, dining options, nightlife],\n",
+    "    \"Safety and Security\": [Low crime rates, secure environment, emergency services],\n",
+    "    \"Climate and Environment\": [Weather conditions, natural surroundings, outdoor activities],\n",
+    "    \"Transportation and Infrastructure\": [Public transportation systems, roads, infrastructure],\n",
+    "    \"Healthcare and Wellness\": [Quality healthcare facilities, hospitals, clinics, wellness services],\n",
+    "    \"Diversity and Inclusion\": [Diverse population, inclusive communities, welcoming environment],\n",
+    "    \"Family-Friendly\": [Family-friendly neighborhoods, parks, schools, amenities]\n",
+    "}\n",
+    "\n",
+    "print(categories)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fddfc23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
