restructered decision tree data structure

--- a/Anaconda_App.ipynb
+++ b/Anaconda_App.ipynb
@@ -12,40 +12,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "89e608d4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (3135816453.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    \"Cost of Living\": [Affordability, housing costs, transportation expenses, cost of living],\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Job opportunities': {'Type': ['Tech', 'Finance', 'Healthcare', 'Education'], 'Location': ['Urban', 'Suburban', 'Rural']}, 'Cost of living': ['High', 'Medium', 'Low'], 'Quality of life': ['High', 'Medium', 'Low'], 'Safety and Security': ['low crime rates', 'friendly neighboorhoods'], 'Climate and Environment': {'Temperature': ['hot', 'cold', 'raining', 'snowy']}, 'Transportation and Infrastructure': {'Traffic': ['Low', 'not a factor'], 'Highway Importance': ['High', 'Low'], 'Crash': ['Low', 'not a factor']}, 'Healthcare and Wellness': ['Afforadable'], 'Diversity and Inclusion': {'Activity': ['Religion', 'Culture specific food/grocery']}, 'Family-Friendly': ['Family-friendly neighborhoods', 'parks', 'schools', 'amenities']}\n"
      ]
     }
    ],
    "source": [
-    "categories = {\n",
-    "    \"Cost of Living\": ['Affordability', 'housing costs', 'transportation expenses', 'cost of living'],\n",
-    "    \"Career Opportunities\": ['Job prospects', 'career growth', 'industry availability'],\n",
-    "    \"Education\": ['Quality of schools', 'universities', 'educational opportunities'],\n",
-    "    \"Lifestyle and Entertainment\": ['Recreational activities, cultural events, dining options, nightlife],\n",
-    "    \"Safety and Security\": [Low crime rates, secure environment, emergency services],\n",
-    "    \"Climate and Environment\": [Weather conditions, natural surroundings, outdoor activities],\n",
-    "    \"Transportation and Infrastructure\": [Public transportation systems, roads, infrastructure],\n",
-    "    \"Healthcare and Wellness\": [Quality healthcare facilities, hospitals, clinics, wellness services],\n",
-    "    \"Diversity and Inclusion\": [Diverse population, inclusive communities, welcoming environment],\n",
-    "    \"Family-Friendly\": [Family-friendly neighborhoods, parks, schools, amenities]\n",
+    "factors = {\n",
+    "    'Job opportunities': {\n",
+    "        'Type': ['Tech', 'Finance', 'Healthcare', 'Education'],\n",
+    "        'Location': ['Urban', 'Suburban', 'Rural'],\n",
+    "    },\n",
+    "    'Cost of living':{\n",
+    "        'Price': ['Low', 'Not a factor']\n",
+    "    \n",
+    "    },\n",
+    "    'Quality of life': {\n",
+    "        'Quality': ['High', 'Not a factor']\n",
+    "    \n",
+    "    },\n",
+    "    'Safety and Security':{\n",
+    "        'Crime' : ['low crime rates', 'friendly neighboorhoods']\n",
+    "    } ,\n",
+    "    \"Climate and Environment\":{\n",
+    "        'Temperature' : ['hot', 'cold','raining', 'snowy'],\n",
+    "    },\n",
+    "    \"Transportation and Infrastructure\": {\n",
+    "        'Traffic': ['Low', 'not a factor'],\n",
+    "        'Highway Importance': ['High', 'Low'],\n",
+    "        'Crash': ['Low', 'not a factor']\n",
+    "    },\n",
+    "      \"Healthcare and Wellness\": {\n",
+    "        'price':  ['Afforadable']\n",
+    "      },\n",
+    "     \"Diversity and Inclusion\": {\n",
+    "         'Activity': ['Religion', 'Culture specific food/grocery']\n",
+    "     },\n",
+    "     \"Family-Friendly\": ['Family-friendly neighborhoods', 'parks', 'schools', 'amenities']\n",
+    "    \n",
     "}\n",
-    "\n",
-    "print(categories)"
+    "print(factors)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fddfc23",
+   "id": "9de36471",
    "metadata": {},
    "outputs": [],
    "source": []
