--- a/Anaconda_App.ipynb
+++ b/Anaconda_App.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "89e608d4",
    "metadata": {},
    "outputs": [
@@ -20,42 +20,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Job opportunities': {'Type': ['Tech', 'Finance', 'Healthcare', 'Education'], 'Location': ['Urban', 'Suburban', 'Rural']}, 'Cost of living': ['High', 'Medium', 'Low'], 'Quality of life': ['High', 'Medium', 'Low'], 'Safety and Security': ['low crime rates', 'friendly neighboorhoods'], 'Climate and Environment': {'Temperature': ['hot', 'cold', 'raining', 'snowy']}, 'Transportation and Infrastructure': {'Traffic': ['Low', 'not a factor'], 'Highway Importance': ['High', 'Low'], 'Crash': ['Low', 'not a factor']}, 'Healthcare and Wellness': ['Afforadable'], 'Diversity and Inclusion': {'Activity': ['Religion', 'Culture specific food/grocery']}, 'Family-Friendly': ['Family-friendly neighborhoods', 'parks', 'schools', 'amenities']}\n"
+      "{'Job opportunities': {'Type': ['Tech', 'Finance', 'Healthcare', 'Education'], 'Location': ['Urban', 'Suburban', 'Rural']}, 'Cost of living': {'Price': ['Low', 'Not a factor']}, 'Quality of life': {'Quality': ['High', 'Not a factor']}, 'Safety and Security': {'Crime': ['low crime rates', 'friendly neighboorhoods']}, 'Climate and Environment': {'Temperature': ['hot', 'cold', 'raining', 'snowy']}, 'Transportation and Infrastructure': {'Traffic': ['Low', 'not a factor'], 'Highway Importance': ['High', 'Low'], 'Crash': ['Low', 'not a factor']}, 'Healthcare and Wellness': {'price': ['Afforadable']}, 'Diversity and Inclusion': {'Activity': ['Religion', 'Culture specific food/grocery']}, 'Family-Friendly': {'Activity': ['Family-friendly neighborhoods', 'parks', 'schools', 'amenities']}}\n"
      ]
     }
    ],
    "source": [
     "factors = {\n",
-    "    'Job opportunities': {\n",
+    "    'Job opportunities': \n",
+    "        {\n",
     "        'Type': ['Tech', 'Finance', 'Healthcare', 'Education'],\n",
     "        'Location': ['Urban', 'Suburban', 'Rural'],\n",
-    "    },\n",
-    "    'Cost of living':{\n",
+    "        },\n",
+    "    'Cost of living':\n",
+    "        {\n",
     "        'Price': ['Low', 'Not a factor']\n",
     "    \n",
-    "    },\n",
-    "    'Quality of life': {\n",
+    "        },\n",
+    "    'Quality of life': \n",
+    "        {\n",
     "        'Quality': ['High', 'Not a factor']\n",
     "    \n",
-    "    },\n",
-    "    'Safety and Security':{\n",
+    "        },\n",
+    "    'Safety and Security':\n",
+    "        {\n",
     "        'Crime' : ['low crime rates', 'friendly neighboorhoods']\n",
-    "    } ,\n",
-    "    \"Climate and Environment\":{\n",
+    "        } ,\n",
+    "    \"Climate and Environment\":\n",
+    "        {\n",
     "        'Temperature' : ['hot', 'cold','raining', 'snowy'],\n",
-    "    },\n",
-    "    \"Transportation and Infrastructure\": {\n",
+    "        },\n",
+    "    \"Transportation and Infrastructure\": \n",
+    "    {\n",
     "        'Traffic': ['Low', 'not a factor'],\n",
     "        'Highway Importance': ['High', 'Low'],\n",
     "        'Crash': ['Low', 'not a factor']\n",
-    "    },\n",
-    "      \"Healthcare and Wellness\": {\n",
+    "        },\n",
+    "    \"Healthcare and Wellness\": \n",
+    "        {\n",
     "        'price':  ['Afforadable']\n",
-    "      },\n",
-    "     \"Diversity and Inclusion\": {\n",
+    "          },\n",
+    "     \"Diversity and Inclusion\": \n",
+    "        {\n",
     "         'Activity': ['Religion', 'Culture specific food/grocery']\n",
-    "     },\n",
-    "     \"Family-Friendly\": ['Family-friendly neighborhoods', 'parks', 'schools', 'amenities']\n",
+    "         },\n",
+    "     \"Family-Friendly\": \n",
+    "        {\n",
+    "         'Activity' : ['Family-friendly neighborhoods', 'parks', 'schools', 'amenities']\n",
+    "                    \n",
+    "         }\n",
     "    \n",
     "}\n",
     "print(factors)"
