added user profile class

--- a/Anaconda_App.ipynb
+++ b/Anaconda_App.ipynb
@@ -67,7 +67,9 @@
    "id": "9de36471",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class UserProfile"
+   ]
   }
  ],
  "metadata": {
