added user class

--- a/Anaconda_App.ipynb
+++ b/Anaconda_App.ipynb
@@ -55,7 +55,10 @@
     "     \"Diversity and Inclusion\": {\n",
     "         'Activity': ['Religion', 'Culture specific food/grocery']\n",
     "     },\n",
-    "     \"Family-Friendly\": ['Family-friendly neighborhoods', 'parks', 'schools', 'amenities']\n",
+    "     \"Family-Friendly\": \n",
+    "        {\n",
+    "         'Factors' : ['Family-friendly neighborhoods', 'parks', 'schools', 'amenities']\n",
+    "         }\n",
     "    \n",
     "}\n",
     "print(factors)"
@@ -68,7 +71,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class UserProfile"
+    "class UserProfile:\n",
+    "    def __init__(self):\n",
+    "        self.factors = {\n",
+    "            'Job opportunities': {\n",
+    "                'Type': None,\n",
+    "                'Location': None,\n",
+    "            },\n",
+    "            'Cost of living': {\n",
+    "                'Price': None,\n",
+    "            },\n",
+    "            'Quality of life': {\n",
+    "                'Quality': None,\n",
+    "            },\n",
+    "            'Safety and Security': {\n",
+    "                'Crime': None,\n",
+    "            },\n",
+    "            \"Climate and Environment\": {\n",
+    "                'Temperature': None,\n",
+    "            },\n",
+    "            \"Transportation and Infrastructure\": {\n",
+    "                'Traffic': None,\n",
+    "                'Highway Importance': None,\n",
+    "                'Crash': None,\n",
+    "            },\n",
+    "            \"Healthcare and Wellness\": {\n",
+    "                'Price': None,\n",
+    "            },\n",
+    "            \"Diversity and Inclusion\": {\n",
+    "                'Activity': None,\n",
+    "            },\n",
+    "            \"Family-Friendly\": {\n",
+    "                'Factors': [],\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "    def set_factor(self, factor, subcategory, option):\n",
+    "        if factor in self.factors and subcategory in self.factors[factor]:\n",
+    "            self.factors[factor][subcategory] = option\n",
+    "        elif factor == \"Family-Friendly\" and subcategory == \"Factors\":\n",
+    "            self.factors[factor][subcategory].append(option)\n",
+    "        else:\n",
+    "            print(\"Invalid factor or subcategory.\")\n",
+    "\n",
+    "    def get_factors(self):\n",
+    "        return self.factors\n",
+    "\n",
+    "    def get_factor(self, factor, subcategory):\n",
+    "        if factor in self.factors and subcategory in self.factors[factor]:\n",
+    "            return self.factors[factor][subcategory]\n",
+    "        elif factor == \"Family-Friendly\" and subcategory == \"Factors\":\n",
+    "            return self.factors[factor][subcategory]\n",
+    "        else:\n",
+    "            return None\n"
    ]
   }
  ],
