restructured data structure

--- a/Anaconda_App.ipynb
+++ b/Anaconda_App.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "89e608d4",
    "metadata": {},
    "outputs": [
@@ -20,44 +20,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Job opportunities': {'Type': ['Tech', 'Finance', 'Healthcare', 'Education'], 'Location': ['Urban', 'Suburban', 'Rural']}, 'Cost of living': ['High', 'Medium', 'Low'], 'Quality of life': ['High', 'Medium', 'Low'], 'Safety and Security': ['low crime rates', 'friendly neighboorhoods'], 'Climate and Environment': {'Temperature': ['hot', 'cold', 'raining', 'snowy']}, 'Transportation and Infrastructure': {'Traffic': ['Low', 'not a factor'], 'Highway Importance': ['High', 'Low'], 'Crash': ['Low', 'not a factor']}, 'Healthcare and Wellness': ['Afforadable'], 'Diversity and Inclusion': {'Activity': ['Religion', 'Culture specific food/grocery']}, 'Family-Friendly': ['Family-friendly neighborhoods', 'parks', 'schools', 'amenities']}\n"
+      "{'Job opportunities': {'Type': ['Tech', 'Finance', 'Healthcare', 'Education'], 'Location': ['Urban', 'Suburban', 'Rural']}, 'Cost of living': {'Housing': ['Low', 'Med', 'High'], 'Transportation': ['Low', 'Med', 'High'], 'Taxes': ['Low', 'Med', 'High']}, 'Safety and Security': {'Crime': {'Robbery': ['Low', 'Med', 'High'], 'Homocide': ['Low', 'Med', 'High'], 'Neighborhood Safety': ['Low', 'Med', 'High']}, 'Crashes': ['Low', 'Med', 'High']}, 'Climate and Environment': {'Temperature': ['hot', 'cold', 'raining', 'snowy'], 'Air Quality': ['Low', 'Med', 'High']}, 'Transportation and Infrastructure': {'Traffic': ['Low', 'Med', 'High'], 'Highway Importance': ['Low', 'Med', 'High']}, 'Healthcare and Wellness': {'Price': ['Low', 'Med', 'High'], 'Accessibilty': ['Low', 'Med', 'High'], 'Specialized Care': ['Low', 'Med', 'High'], 'Insurance': ['Low', 'Med', 'High']}, 'Diversity and Inclusion': {'LGBTQ': ['Low', 'Med', 'High'], 'Caucasian': ['Low', 'Med', 'High'], 'Asian': ['Low', 'Med', 'High'], 'Hispanic': ['Low', 'Med', 'High'], 'African American': ['Low', 'Med', 'High']}, 'Hobbies': {'Outdoor': ['Low', 'Med', 'High'], 'Nightlife': ['Low', 'Med', 'High']}}\n"
      ]
     }
    ],
    "source": [
     "factors = {\n",
     "    'Job opportunities': {\n",
-    "        'Type': ['Tech', 'Finance', 'Healthcare', 'Education'],\n",
+    "        'Type': {\n",
+    "            'Tech', \n",
+    "            'Finance', 'Healthcare', 'Education'\n",
+    "        }\n",
     "        'Location': ['Urban', 'Suburban', 'Rural'],\n",
     "    },\n",
     "    'Cost of living':{\n",
-    "        'Price': ['Low', 'Not a factor']\n",
-    "    \n",
-    "    },\n",
-    "    'Quality of life': {\n",
-    "        'Quality': ['High', 'Not a factor']\n",
+    "        'Housing': ['Low', 'Med', 'High'],\n",
+    "        'Transportation': ['Low', 'Med', 'High'],\n",
+    "        'Taxes': ['Low', 'Med', 'High']\n",
     "    \n",
     "    },\n",
     "    'Safety and Security':{\n",
-    "        'Crime' : ['low crime rates', 'friendly neighboorhoods']\n",
+    "        'Crime' : {\n",
+    "            'Robbery': ['Low', 'Med', 'High'],\n",
+    "            'Homocide': ['Low', 'Med', 'High'],\n",
+    "            'Neighborhood Safety': ['Low', 'Med', 'High']\n",
+    "        \n",
+    "        },\n",
+    "        'Crashes': ['Low', 'Med', 'High']\n",
     "    } ,\n",
     "    \"Climate and Environment\":{\n",
     "        'Temperature' : ['hot', 'cold','raining', 'snowy'],\n",
+    "        'Air Quality': ['Low', 'Med', 'High']\n",
     "    },\n",
     "    \"Transportation and Infrastructure\": {\n",
-    "        'Traffic': ['Low', 'not a factor'],\n",
-    "        'Highway Importance': ['High', 'Low'],\n",
-    "        'Crash': ['Low', 'not a factor']\n",
+    "        'Traffic': ['Low', 'Med', 'High'],\n",
+    "        'Highway Importance': ['Low', 'Med', 'High'],\n",
+    "\n",
     "    },\n",
     "      \"Healthcare and Wellness\": {\n",
-    "        'price':  ['Afforadable']\n",
+    "        'Price':  ['Low', 'Med', 'High'],\n",
+    "        'Accessibilty': ['Low', 'Med', 'High'],\n",
+    "        'Specialized Care': ['Low', 'Med', 'High'],\n",
+    "        'Insurance': ['Low', 'Med', 'High']\n",
     "      },\n",
     "     \"Diversity and Inclusion\": {\n",
-    "         'Activity': ['Religion', 'Culture specific food/grocery']\n",
+    "         'LGBTQ': ['Low', 'Med', 'High'],\n",
+    "         'Caucasian': ['Low', 'Med', 'High'],\n",
+    "         'Asian': ['Low', 'Med', 'High'],\n",
+    "         'Hispanic': ['Low', 'Med', 'High'],\n",
+    "         'African American': ['Low', 'Med', 'High'],\n",
+    "         \n",
     "     },\n",
-    "     \"Family-Friendly\": \n",
+    "     \"Hobbies\": \n",
     "        {\n",
-    "         'Factors' : ['Family-friendly neighborhoods', 'parks', 'schools', 'amenities']\n",
+    "         'Outdoor':['Low', 'Med', 'High'],\n",
+    "         'Nightlife': ['Low', 'Med', 'High']\n",
     "         }\n",
     "    \n",
     "}\n",
