--- a/Anaconda_App.ipynb
+++ b/Anaconda_App.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "89e608d4",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Job opportunities': {'Type': ['Tech', 'Finance', 'Healthcare', 'Education'], 'Location': ['Urban', 'Suburban', 'Rural']}, 'Cost of living': {'Housing': ['Low', 'Med', 'High'], 'Transportation': ['Low', 'Med', 'High'], 'Taxes': ['Low', 'Med', 'High']}, 'Safety and Security': {'Crime': {'Robbery': ['Low', 'Med', 'High'], 'Homocide': ['Low', 'Med', 'High'], 'Neighborhood Safety': ['Low', 'Med', 'High']}, 'Crashes': ['Low', 'Med', 'High']}, 'Climate and Environment': {'Temperature': ['hot', 'cold', 'raining', 'snowy'], 'Air Quality': ['Low', 'Med', 'High']}, 'Transportation and Infrastructure': {'Traffic': ['Low', 'Med', 'High'], 'Highway Importance': ['Low', 'Med', 'High']}, 'Healthcare and Wellness': {'Price': ['Low', 'Med', 'High'], 'Accessibilty': ['Low', 'Med', 'High'], 'Specialized Care': ['Low', 'Med', 'High'], 'Insurance': ['Low', 'Med', 'High']}, 'Diversity and Inclusion': {'LGBTQ': ['Low', 'Med', 'High'], 'Caucasian': ['Low', 'Med', 'High'], 'Asian': ['Low', 'Med', 'High'], 'Hispanic': ['Low', 'Med', 'High'], 'African American': ['Low', 'Med', 'High']}, 'Hobbies': {'Outdoor': ['Low', 'Med', 'High'], 'Nightlife': ['Low', 'Med', 'High']}}\n"
+      "{'Job opportunities': {'Type': {'Tech': ['Low', 'Med', 'High'], 'Finance': ['Low', 'Med', 'High'], 'Healthcare': ['Low', 'Med', 'High'], 'Education': ['Low', 'Med', 'High']}, 'Location': {'Urban': ['Low', 'Med', 'High'], 'Suburban': ['Low', 'Med', 'High'], 'Rural': ['Low', 'Med', 'High']}}, 'Cost of living': {'Housing': ['Low', 'Med', 'High'], 'Transportation': ['Low', 'Med', 'High'], 'Taxes': ['Low', 'Med', 'High']}, 'Safety and Security': {'Crime': {'Robbery': ['Low', 'Med', 'High'], 'Homocide': ['Low', 'Med', 'High'], 'Neighborhood Safety': ['Low', 'Med', 'High']}, 'Crashes': ['Low', 'Med', 'High']}, 'Climate and Environment': {'Temperature': ['hot', 'cold', 'raining', 'snowy'], 'Air Quality': ['Low', 'Med', 'High']}, 'Transportation and Infrastructure': {'Traffic': ['Low', 'Med', 'High'], 'Highway Importance': ['Low', 'Med', 'High']}, 'Healthcare and Wellness': {'Price': ['Low', 'Med', 'High'], 'Accessibilty': ['Low', 'Med', 'High'], 'Specialized Care': ['Low', 'Med', 'High'], 'Insurance': ['Low', 'Med', 'High']}, 'Diversity and Inclusion': {'LGBTQ': ['Low', 'Med', 'High'], 'Caucasian': ['Low', 'Med', 'High'], 'Asian': ['Low', 'Med', 'High'], 'Hispanic': ['Low', 'Med', 'High'], 'African American': ['Low', 'Med', 'High']}, 'Hobbies': {'Outdoor': ['Low', 'Med', 'High'], 'Nightlife': ['Low', 'Med', 'High']}}\n"
      ]
     }
    ],
@@ -28,10 +28,16 @@
     "factors = {\n",
     "    'Job opportunities': {\n",
     "        'Type': {\n",
-    "            'Tech', \n",
-    "            'Finance', 'Healthcare', 'Education'\n",
-    "        }\n",
-    "        'Location': ['Urban', 'Suburban', 'Rural'],\n",
+    "            'Tech': ['Low', 'Med', 'High'],\n",
+    "            'Finance':['Low', 'Med', 'High'],\n",
+    "            'Healthcare':['Low', 'Med', 'High'],\n",
+    "            'Education':['Low', 'Med', 'High']\n",
+    "        },\n",
+    "        'Location': {\n",
+    "            'Urban':['Low', 'Med', 'High'],\n",
+    "            'Suburban':['Low', 'Med', 'High'],\n",
+    "            'Rural':['Low', 'Med', 'High']\n",
+    "                    },\n",
     "    },\n",
     "    'Cost of living':{\n",
     "        'Housing': ['Low', 'Med', 'High'],\n",
