--- a/nlp_stuff.ipynb
+++ b/nlp_stuff.ipynb
@@ -30,48 +30,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Job opportunities: 0.8270591385834603\n",
-      "Cost of Living: 0.8436666820762551\n",
-      "Safety and Security: 0.7903005672638133\n",
-      "Climate and Environment: 0.8548144704453947\n",
-      "Transportation and Infrastructure: 0.8612233114786499\n",
-      "Healthcare and Wellness: 0.8972961156674452\n",
-      "Diversity and Inclusion: 0.8404496547416356\n",
-      "Family-Friendly: 0.7343727477900246\n"
+      "Top 5 categories:\n",
+      "Climate and Environment\n",
+      "Job opportunities\n",
+      "Quality of life\n",
+      "Diversity and Inclusion\n",
+      "Safety and Security\n"
      ]
     }
    ],
    "source": [
     "# Define representative sentences for each category\n",
     "categories = {\n",
-    "    'Job opportunities': 'This city has plenty of job opportunities.',\n",
-    "    'Cost of Living': 'The quality of life in this city is great.',\n",
-    "    'Safety and Security': 'This city is very safe and secure.',\n",
-    "    'Climate and Environment': 'The climate and environment in this city is wonderful.',\n",
-    "    'Transportation and Infrastructure': 'The transportation and infrastructure in this city is excellent.',\n",
-    "    'Healthcare and Wellness': 'The healthcare and wellness options in this city are numerous.',\n",
-    "    'Diversity and Inclusion': 'This city is very diverse and inclusive.',\n",
-    "    'Family-Friendly': 'This city is very family-friendly.'\n",
+    "    'Job opportunities': 'This city offers a thriving job market with diverse employment opportunities.',\n",
+    "    'Cost of Living' :'The cost of living in this city is affordable, with reasonable housing prices and a low overall expense.',\n",
+    "    'Quality of life': 'Residents enjoy a high quality of life, with access to excellent amenities and recreational facilities.',\n",
+    "    'Safety and Security': 'The city prioritizes safety and security, ensuring a peaceful and secure environment for its residents.',\n",
+    "    'Climate and Environment': 'Experience a pleasant climate and a pristine natural environment, perfect for outdoor activities.',\n",
+    "    'Transportation and Infrastructure': 'Efficient transportation systems and well-developed infrastructure make commuting hassle-free.',\n",
+    "    'Traffic' :'The city has well-managed traffic systems and minimal congestion, ensuring smooth and efficient commuting.',    \n",
+    "    'Healthcare and Wellness': 'Access top-notch healthcare facilities and a wide range of wellness services to prioritize your well-being.',\n",
+    "    'Diversity and Inclusion': 'Celebrate a vibrant and inclusive community that embraces diversity in all its forms.',\n",
+    "    'Family-Friendly': 'Families thrive in this city, with excellent schools, parks, and family-oriented activities.'\n",
     "}\n",
     "\n",
     "\n",
-    "user_text = 'When considering a new city to move to, the most important factors for me are quality of life, including safety, healthcare, and education; career opportunities; a vibrant cultural scene; and a reasonable cost of living. I prioritize cities that offer a high standard of living, with low crime rates, accessible healthcare, excellent schools, and diverse job prospects. Additionally, I value cities that embrace diversity, provide ample recreational and cultural activities, and strike a balance between affordability and overall quality of life. By considering these aspects, I can make a well-informed decision that supports my personal and professional aspirations in a new city.'\n",
+    "user_text = 'I am looking for a city with a strong job market, good quality of life, and a safe environment for my family.'\n",
     "\n",
     "\n",
     "scores = {}\n",
     "for category, representative_sentence in categories.items():\n",
     "    scores[category] = nlp(representative_sentence).similarity(nlp(user_text))\n",
     "\n",
+    "sorted_scores = sorted(scores.items(), key=lambda x: x[1], reverse=True)\n",
     "\n",
-    "for category, score in scores.items():\n",
-    "    print(f'{category}: {score}')\n"
+    "# Retrieve the top 5 categories\n",
+    "top_categories = [category for category, score in sorted_scores[:5]]\n",
+    "\n",
+    "print(\"Top 5 categories:\")\n",
+    "for category in top_categories:\n",
+    "    print(category)\n"
    ]
   }
  ],
