--- a/Anaconda_App.ipynb
+++ b/Anaconda_App.ipynb
@@ -67,7 +67,113 @@
    "id": "9de36471",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "decision_tree = {\n",
+    "    'Job opportunities': {\n",
+    "        'Type': {\n",
+    "            1: 'Tech',\n",
+    "            2: 'Finance',\n",
+    "            3: 'Healthcare',\n",
+    "            4: 'Education'\n",
+    "        },\n",
+    "        'Location': {\n",
+    "            1: 'Urban',\n",
+    "            2: 'Suburban',\n",
+    "            3: 'Rural'\n",
+    "        }\n",
+    "    },\n",
+    "    'Cost of living': {\n",
+    "        'Price': {\n",
+    "            1: 'Low',\n",
+    "            2: 'Not a factor'\n",
+    "        }\n",
+    "    },\n",
+    "    'Quality of life': {\n",
+    "        'Quality': {\n",
+    "            1: 'High',\n",
+    "            2: 'Not a factor'\n",
+    "        }\n",
+    "    },\n",
+    "    'Safety and Security': {\n",
+    "        'Crime': {\n",
+    "            1: 'Low crime rates',\n",
+    "            2: 'Friendly neighborhoods'\n",
+    "        }\n",
+    "    },\n",
+    "    'Climate and Environment': {\n",
+    "        'Temperature': {\n",
+    "            1: 'Hot',\n",
+    "            2: 'Cold',\n",
+    "            3: 'Raining',\n",
+    "            4: 'Snowy'\n",
+    "        }\n",
+    "    },\n",
+    "    'Transportation and Infrastructure': {\n",
+    "        'Traffic': {\n",
+    "            1: 'Low',\n",
+    "            2: 'Not a factor'\n",
+    "        },\n",
+    "        'Highway Importance': {\n",
+    "            1: 'High',\n",
+    "            2: 'Low'\n",
+    "        },\n",
+    "        'Crash': {\n",
+    "            1: 'Low',\n",
+    "            2: 'Not a factor'\n",
+    "        }\n",
+    "    },\n",
+    "    'Healthcare and Wellness': {\n",
+    "        'Price': {\n",
+    "            1: 'Affordable'\n",
+    "        }\n",
+    "    },\n",
+    "    'Diversity and Inclusion': {\n",
+    "        'Activity': {\n",
+    "            1: 'Religion',\n",
+    "            2: 'Culture specific food/grocery'\n",
+    "        }\n",
+    "    },\n",
+    "    'Family-Friendly': {\n",
+    "        1: 'Family-friendly neighborhoods',\n",
+    "        2: 'Parks',\n",
+    "        3: 'Schools',\n",
+    "        4: 'Amenities'\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "def calculate_score(answers):\n",
+    "    score = 0\n",
+    "    for category, subfactors in answers.items():\n",
+    "        for subfactor, answer in subfactors.items():\n",
+    "            if answer in decision_tree[category][subfactor]:\n",
+    "                score += decision_tree[category][subfactor][answer]\n",
+    "    return score\n",
+    "\n",
+    "def find_best_location(tree, user_answers):\n",
+    "    max_score = -1\n",
+    "    best_location = None\n",
+    "    for location, scores in location_scores.items():\n",
+    "    score = 0\n",
+    "    for category, subfactors in user_answers.items():\n",
+    "        for subfactor, answer in subfactors.items():\n",
+    "            if answer in decision_tree[category][subfactor]:\n",
+    "                score += scores[category]\n",
+    "    if score > max_score:\n",
+    "        max_score = score\n",
+    "        best_location = location\n",
+    "\n",
+    "    return best_location\n",
+    "\n",
+    "user_answers = {}\n",
+    "for category, subfactors in decision_tree.items():\n",
+    "user_answers[category] = {}\n",
+    "for subfactor, options in subfactors.items():\n",
+    "answer = int(input(f\"{subfactor} ({', '.join([str(option) for option in options.keys()])}): \"))\n",
+    "user_answers[category][subfactor] = options[answer]\n",
+    "\n",
+    "\n",
+    "print(\"User Score:\", user_score)\n"
+   ]
   }
  ],
  "metadata": {
