--- a/nlp_stuff.ipynb
+++ b/nlp_stuff.ipynb
@@ -76,7 +76,7 @@
     "\n",
     "print(\"Top 5 categories:\")\n",
     "for category in top_categories:\n",
-    "    print(category)\n"
+    "    print(category)    #CHange to show all factor, Change from sentences to key words\n"
    ]
   }
  ],
