Shows all categories now

--- a/nlp_stuff.ipynb
+++ b/nlp_stuff.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-06-15 13:46:43.363015: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2023-06-29 11:22:07.194921: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,19 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Top 5 categories:\n",
+      "Categories ranked\n",
       "Climate and Environment\n",
       "Job opportunities\n",
       "Quality of life\n",
       "Diversity and Inclusion\n",
-      "Safety and Security\n"
+      "Safety and Security\n",
+      "Cost of Living\n",
+      "Healthcare and Wellness\n",
+      "Family-Friendly\n",
+      "Traffic\n",
+      "Transportation and Infrastructure\n"
      ]
     }
    ],
@@ -72,9 +77,9 @@
     "sorted_scores = sorted(scores.items(), key=lambda x: x[1], reverse=True)\n",
     "\n",
     "# Retrieve the top 5 categories\n",
-    "top_categories = [category for category, score in sorted_scores[:5]]\n",
+    "top_categories = [category for category, score in sorted_scores[:10]]\n",
     "\n",
-    "print(\"Top 5 categories:\")\n",
+    "print(\"Categories ranked\")\n",
     "for category in top_categories:\n",
     "    print(category)    #CHange to show all factor, Change from sentences to key words\n"
    ]
